# frappe_social

./: .gitignore  DEMO_GUIDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
frappe_social/: __init__.py  hooks.py  install.py  modules.txt  patches.txt
frappe_social/frappe_social/: __init__.py  tasks.py
frappe_social/frappe_social/api/: __init__.py  analytics.py  oauth.py  posts.py
frappe_social/frappe_social/doctype/social_analytics/: social_analytics.js  social_analytics.json  social_analytics.py  test_social_analytics.py
frappe_social/frappe_social/doctype/social_analytics_metric/: social_analytics_metric.json  social_analytics_metric.py
frappe_social/frappe_social/doctype/social_integration/: social_integration.js  social_integration.json  social_integration.py  social_integration_list.js  test_social_integration.py
frappe_social/frappe_social/doctype/social_post/: social_post.js  social_post.json  social_post.py  social_post_list.js  test_social_post.py
frappe_social/frappe_social/doctype/social_post_analytics/: social_post_analytics.js  social_post_analytics.json  social_post_analytics.py  test_social_post_analytics.py
frappe_social/frappe_social/doctype/social_post_media/: social_post_media.json  social_post_media.py
frappe_social/frappe_social/doctype/social_post_platform/: __init__.py  social_post_platform.json  social_post_platform.py
frappe_social/frappe_social/doctype/social_settings/: social_settings.js  social_settings.json  social_settings.py  test_social_settings.py
frappe_social/frappe_social/providers/: __init__.py  base.py  facebook.py  instagram.py  linkedin.py  twitter.py  youtube.py
frappe_social/frappe_social/report/: __init__.py
frappe_social/frappe_social/report/account_growth/: account_growth.js  account_growth.json  (+1 more)
frappe_social/frappe_social/services/: analytics_service.py  post_service.py  token_service.py
frappe_social/frappe_social/utils/: media.py
frappe_social/www/: select-social-page.html  select-social-page.py
(+7 files in other folders)
