[project]
name = "frappe_social"
version = "1.0.0"
description = "Social media scheduling and analytics module for Frappe/ERPNext"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Macrobian", email = "info@macrobian.com"}
]
keywords = ["frappe", "erpnext", "social-media", "scheduler", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Frappe",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "tweepy>=4.14.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
    "Pillow>=10.0.0",
    "python-magic>=0.4.27",
]

[project.urls]
Homepage = "https://github.com/macrobian88/frappe-social-media-scheduler"
Documentation = "https://github.com/macrobian88/frappe-social-media-scheduler#readme"
Repository = "https://github.com/macrobian88/frappe-social-media-scheduler.git"
Issues = "https://github.com/macrobian88/frappe-social-media-scheduler/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["frappe_social*"]

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 110

[tool.ruff]
line-length = 110
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
